fixed console errors

--- a/views/_partials/_navbar.ejs
+++ b/views/_partials/_navbar.ejs
@@ -3,7 +3,7 @@
     <li><a href="#">text</a></li>
   </ul>
   <div class="centerpiece__container">
-    <img id="logo" src="./images/logo.png" />
+    <img id="logo" src="" />
   </div>
   <ul class="navlist navlist--right">
     <li><a href="#">text</a></li>
