--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,6 @@
   <footer>
 
   </footer>
-  <script src="./scripts/bundle.js"></script>
+  <script src="./javascripts/bundle.js"></script>
 </body>
 </html>
