--- a/styles/sass/app.scss
+++ b/styles/sass/app.scss
@@ -1,3 +1,7 @@
 @import './_variables';
 @import './_menu-item';
 @import './_navbar';
+
+@import './customers.scss';
+@import './_sidebar.scss';
+@import './_shared.scss';
