--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Ordr</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/app.css">
-  </head>
+  <%- include ./_partials/_head.ejs %>
 <body>
   <%- include ./_partials/_navbar.ejs %>
   <main class="container">
