--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -84,3 +84,71 @@
   /* <img> */
   max-height: 60px;
   width: 100%; }
+
+.customers__container {
+  height: 100%;
+  width: 62%; }
+
+.sidebar {
+  /* <div> */
+  position: fixed;
+  top: 60px;
+  right: 0px;
+  bottom: 0px;
+  width: 38%;
+  border-left: 1px solid black; }
+
+.shopping-cart {
+  /* <section> */
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 40px;
+  left: 0px; }
+
+.shopping-cart__list {
+  /* <ol> */
+  margin: 0px;
+  padding: 0px; }
+
+.shopping-cart__list--item {
+  /* <li> */ }
+
+.shopping-cart__list--item--name {
+  /* <label> */
+  margin: 0px auto; }
+
+.shopping-cart__footer {
+  /* <footer> */
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  height: 40px;
+  background-color: grey;
+  border-top: 1px solid black; }
+
+.shopping-cart__submit-button {
+  /* <button> */
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  background-color: none; }
+
+.container {
+  /* <main> */
+  height: 100%;
+  width: 100%;
+  margin-top: 60px; }
+
+ul {
+  margin: 0px;
+  padding: 0px; }
+
+li {
+  list-style: none;
+  margin: 0px;
+  padding: 0px; }
+
+* {
+  box-sizing: border-box; }
