--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -103,7 +103,7 @@
   position: absolute;
   top: 0px;
   right: 0px;
-  bottom: 40px;
+  bottom: 50px;
   left: 0px; }
 
 .shopping-cart__list {
@@ -112,11 +112,36 @@
   padding: 0px; }
 
 .shopping-cart__list--item {
-  /* <li> */ }
+  /* <li> */
+  height: 50px;
+  padding: 0px;
+  border: 0px;
+  border-bottom: 1px solid black; }
+
+.shopping-cart__list--item fieldset {
+  /* <fieldset> */
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  border: 0px; }
 
 .shopping-cart__list--item--name {
   /* <label> */
-  margin: 0px auto; }
+  float: left;
+  margin: 0px auto;
+  padding: 15px; }
+
+.shopping-cart__list--item--quantity {
+  /* <input> */
+  float: right;
+  height: 25px;
+  margin: 12px 15px;
+  border: 1px solid black; }
+
+.shopping-cart__list--item--quantity:focus {
+  /* <input> */
+  outline: none; }
 
 .shopping-cart__footer {
   /* <footer> */
@@ -124,7 +149,7 @@
   right: 0px;
   bottom: 0px;
   left: 0px;
-  height: 40px;
+  height: 50px;
   background-color: grey;
   border-top: 1px solid black; }
 
@@ -151,4 +176,5 @@ li {
   padding: 0px; }
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: helvetica; }
