--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -5,31 +5,7 @@
         <li class="shopping-cart__list--item">
           <fieldset>
             <label class="shopping-cart__list--item--name">Item Name</label>
-            <input type="checkbox"/>
-          </fieldset>
-        </li>
-        <li class="shopping-cart__list--item">
-          <fieldset>
-            <label class="shopping-cart__list--item--name">Item Name</label>
-            <input type="checkbox"/>
-          </fieldset>
-        </li>
-        <li class="shopping-cart__list--item">
-          <fieldset>
-            <label class="shopping-cart__list--item--name">Item Name</label>
-            <input type="checkbox"/>
-          </fieldset>
-        </li>
-        <li class="shopping-cart__list--item">
-          <fieldset>
-            <label class="shopping-cart__list--item--name">Item Name</label>
-            <input type="checkbox"/>
-          </fieldset>
-        </li>
-        <li class="shopping-cart__list--item">
-          <fieldset>
-            <label class="shopping-cart__list--item--name">Item Name</label>
-            <input type="checkbox"/>
+            <input class="shopping-cart__list--item--quantity" type="number" name="quantity" min="1" max="100">
           </fieldset>
         </li>
       </ol>
