--- a/styles/sass/_sidebar.scss
+++ b/styles/sass/_sidebar.scss
@@ -9,7 +9,7 @@
   border-left: 1px solid black;
 }
 
-.shopping-cart { /* <section> */
+.cart { /* <section> */
   position: absolute;
     top: 0px;
     right: 0px;
@@ -17,19 +17,19 @@
     left: 0px;
 }
 
-.shopping-cart__list { /* <ol> */
+.cart__list { /* <ol> */
   margin: 0px;
   padding: 0px;
 }
 
-    .shopping-cart__list--item { /* <li> */
+    .cart__list--item { /* <li> */
       height: 50px;
       padding: 0px;
       border: 0px;
       border-bottom: 1px solid black;
     }
 
-    .shopping-cart__list--item fieldset { /* <fieldset> */
+    .cart__list--item fieldset { /* <fieldset> */
       height: 100%;
       width: 100%;
       padding: 0px;
@@ -37,23 +37,23 @@
       border: 0px;
     }
 
-    .shopping-cart__list--item--name { /* <label> */
+    .cart__list--item--name { /* <label> */
       float: left;
       margin: 0px auto;
       padding: 15px;
     }
 
-    .shopping-cart__list--item--quantity { /* <input> */
+    .cart__list--item--quantity { /* <input> */
       float: right;
       height: 25px;
       margin: 12px 15px;
       border: 1px solid black;
     }
-      .shopping-cart__list--item--quantity:focus { /* <input> */
+      .cart__list--item--quantity:focus { /* <input> */
         outline: none;
       }
 
-.shopping-cart__footer { /* <footer> */
+.cart__footer { /* <footer> */
   position: absolute;
     right:0px;
     bottom: 0px;
@@ -66,7 +66,7 @@
   border-top: 1px solid black;
 }
 
-    .shopping-cart__submit-button { /* <button> */
+    .cart__submit-button { /* <button> */
       cursor: pointer;
       height: 100%;
       width: 100%;
