--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -1,18 +1,11 @@
 <div class="sidebar">
   <form>
-    <section class="shopping-cart">
-      <ol class="shopping-cart__list">
-        <li class="shopping-cart__list--item">
-          <fieldset>
-            <label class="shopping-cart__list--item--name">Item Name</label>
-            <input class="shopping-cart__list--item--quantity" type="number" name="quantity" min="1" max="100">
-          </fieldset>
-        </li>
-      </ol>
+    <section class="cart">
+      <ol class="cart__list"></ol>
     </section>
 
-    <footer class="shopping-cart__footer">
-      <button class="shopping-cart__submit-button" type="submit">Place Order</button>
+    <footer class="cart__footer">
+      <button class="cart__submit-button" type="submit">Place Order</button>
     </footer>
   </form>
 </div>
