--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <form>
     <section class="cart">
-      <ol class="cart__list"></ol>
+      <ul class="cart__list"></ul>
     </section>
 
     <footer class="cart__footer">
