--- a/views/customers/index.ejs
+++ b/views/customers/index.ejs
@@ -6,6 +6,9 @@
   
   <%- include ../_partials/_sidebar.ejs %>
   <main class="customers__container">
+    <ul class="menu-list">
+      <%- include ../_partials/_menu-item.ejs %>
+    </ul>
   </main>
   <footer></footer>
   <script src="./javascripts/bundle.js"></script>
