--- a/views/_partials/_menu-item.ejs
+++ b/views/_partials/_menu-item.ejs
@@ -1,3 +1,12 @@
 <li class="menu-item">
   <img src="#"></img>
+  <div>
+    <% const convert = function (string) { %>
+      <% return string.toLowerCase().replace(/\s/g, '_'); %>
+    <% }; %>
+    <% let menuItem_name = "Lobster Pasta"; %>
+    <% let menuItem_converted = convert(menuItem_name); %>
+    <h2 class="menu-item__name" data-name="<%= menuItem_converted %>"><%= menuItem_name %></h2>
+    <span class="menu-item__price" data-price="20">$20</span>
+  </div>
 </li>
