--- a/styles/sass/restaurant.scss
+++ b/styles/sass/restaurant.scss
@@ -1,24 +1,48 @@
 
 
 .container{
-
+    width: 100%;
+    background-color: white;
 
 
   .chit_container{
     border-color: black;
     border-style:solid;
-    background-color: blue;
-    margin: auto auto;
+    background-color: #82827A;
+    margin: auto ;
     height: 500px;
+    width: 800px;
 
   }
   .order_chit{
 
+    header{
+      background-color: white;
+      width:100%;
+      position: relative;
+      left:0px;
+      top:0px;
+
+    }
+    .remove_chit{
+      color: blue;
+    }
+
+    padding: 10px 10px 10px 10px;
     border-color: black;
     border-style:solid;
     float: left;
     margin: 10px 10px 10px 10px;
-    background-color:grey;
+    background-color:#4E484F;
+    ul{
+      padding:0;
+      li{
+      padding:none;
+      list-style-type: none;
+    }
+
+    }
+
   }
 
 }
