Polishing up sidebar and added normalize and reset

--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -3,8 +3,8 @@
     <section class="cart">
       <ul class="cart__list"></ul>
     </section>
-
     <footer class="cart__footer">
+      <input class="cart__total-cost" type="text" readonly="readonly" value="$0" />
       <button class="cart__submit-button" type="submit">Place Order</button>
     </footer>
   </form>
