--- a/styles/sass/_sidebar.scss
+++ b/styles/sass/_sidebar.scss
@@ -47,11 +47,20 @@
       float: right;
       height: 25px;
       margin: 12px 15px;
+      padding: 0px 10px;
+      width: 40px;
       border: 1px solid black;
     }
       .cart__list--item--quantity:focus { /* <input> */
         outline: none;
       }
+
+    .cart__list--item--price { /* <span> */
+      display: block;
+      float: right;
+
+      margin: 17px 15px 15px 0px;
+    }
 
 .cart__footer { /* <footer> */
   position: absolute;
@@ -65,11 +74,17 @@
 
   border-top: 1px solid black;
 }
-
+    .cart__total-cost { /* <input> */ 
+      height: 40px;
+      width: 100%;
+      text-align: center;
+      border: 0px;
+    }
     .cart__submit-button { /* <button> */
       cursor: pointer;
-      height: 100%;
+      height: 50px;
       width: 100%;
       background-color: none;
+      border-top: 1px solid black;
     }
 
