Started working on an ajax request for restaurant side

--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -1,10 +1,24 @@
 .container {
   width: 100%;
   background-color: white; }
+  .container .deliver-food {
+    background-color: #FFD397;
+    font-size: larger;
+    height: 75px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    line-height: 90px;
+    text-align: center;
+    vertical-align: middle;
+    width: 75%; }
+  .container .deliver-food:hover {
+    background-color: #D82351; }
   .container .chit_container {
     border-color: black;
     border-style: solid;
-    background-color: #82827A;
+    background-color: #B2BFC7;
     margin: auto;
     height: 500px;
     width: 800px; }
@@ -14,7 +28,7 @@
     border-style: solid;
     float: left;
     margin: 10px 10px 10px 10px;
-    background-color: #4E484F; }
+    background-color: #DADEE7; }
     .container .order_chit header {
       background-color: white;
       width: 100%;
