--- a/styles/sass/restaurant.scss
+++ b/styles/sass/restaurant.scss
@@ -4,11 +4,32 @@
     width: 100%;
     background-color: white;
 
+   .deliver-food{
 
+    background-color:#FFD397 ;
+    font-size: larger;
+    height: 75px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    line-height: 90px;
+    text-align: center;
+    vertical-align: middle;
+    width:75%;
+
+
+    }
+
+
+    .deliver-food:hover{
+        background-color: #D82351;
+
+    }
   .chit_container{
     border-color: black;
     border-style:solid;
-    background-color: #82827A;
+    background-color: #B2BFC7;
     margin: auto ;
     height: 500px;
     width: 800px;
@@ -33,7 +54,7 @@
     border-style:solid;
     float: left;
     margin: 10px 10px 10px 10px;
-    background-color:#4E484F;
+    background-color:#DADEE7;
     ul{
       padding:0;
       li{
