--- a/views/restaurants/index.ejs
+++ b/views/restaurants/index.ejs
@@ -1,62 +1,58 @@
-
-
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Ordr</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/restaurant.css">
-    <!-- <script type="text/javascript" src=".../public/javascripts/restaurant.js"></script> -->
+    <head>
+        <meta charset="utf-8">
+            <title>
+                Ordr
+            </title>
+            <link href="./stylesheets/restaurant.css" rel="stylesheet" type="text/css">
+                <!-- <script type="text/javascript" src=".../public/javascripts/restaurant.js"></script> -->
+            </link>
+        </meta>
+    </head>
+    <body>
 
+        <main class="container">
 
-  </head>
-<body>
-
-  <main class="container">
-  <div class="chit_container">
-      <%let order_id;%>
+            <div class="chit_container">
+                <%let order_id;%>
       <%let customer_name;%>
       <%let dishes;%>
       <%let order_date;%>
       <%let completed;%>
 
       <% for(var order of dbData) {%>
-      <%  order_id      = order.id;%>
-      <%  customer_name = order.customer_name;%>
-      <%  dishes        = order.dishes;%>
-      <%  order_date    = order.order_date;%>
-      <%  completed     = order.completed%>
+          <div class="order_chit"
+               data-order_id="<%=order.id%>"
+               data-customer_name="<%=order.customer_name%>"
+               data-dishes='<%-JSON.stringify(order.dishes)%>'
+               data-order_date="<%=order.order_date%>"
+               data-completed="<%=order.completed%>"
+          >
+                    <header>
+                        <button class="remove_chit" type="button">Queued: click to finish</button>
+                        <h3 id="order_id" ><%=order.id%></h3>
+                        <h4 id="order_id" ><%=order.order_date%></h4>
+                    </header>
 
-    <div class="order_chit">
-       <header>
-        <button class="remove_chit" type="button">Queued: click to finish</button>
-        <h2 id = "order_id"><%=order_id%></h2>
-        <h4><%=order_date%></h4>
-       </header>
-       <div>
-         <ul>
-           <%for(let key in dishes) {%>
-              <li>
-                <span id = "dish_name"><%=key%></span>
-                <span id = "dish_quantity"><%=dishes[key]%></span>
-              </li>
-           <%}%>
-         </ul>
-       </div>
-    </div>
-  <%}%>
+                        <ul>
+                            <%for(let key in order.dishes) {%>
+                            <li>
+                                <span id="dish_name"><%=key%></span>
+                                <span id="dish_quantity"><%=order.dishes[key]%></span>
+                            </li>
+                            <%}%>
+                        </ul>
 
-</div>
-  </main>
-  <footer>
+          </div>
+                <%}%>
 
-  </footer>
-
-
-  <script src="./javascripts/bundle.js"></script>
-
-</body>
+            </div>
+        </main>
+        <footer>
+        </footer>
+        <script src="./javascripts/bundle.js">
+        </script>
+    </body>
 </html>
-
-
-
