--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -1,3 +1,7 @@
+.finished {
+  background-color: black !important;
+  color: white !important; }
+
 .container {
   width: 100%;
   background-color: white; }
@@ -30,7 +34,6 @@
     margin: 10px 10px 10px 10px;
     background-color: #DADEE7; }
     .container .order_chit header {
-      background-color: white;
       width: 100%;
       position: relative;
       left: 0px;
