Added connectivity to server

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -420,6 +420,10 @@ textarea {
   float: left;
   background-color: grey; }
 
+.menu-item:hover {
+  /* <li> */
+  background-color: blue; }
+
 /* ==== Navbar ==== */
 #navbar__container {
   /* <nav> */
@@ -539,6 +543,9 @@ textarea {
   border: 0px;
   border-bottom: 1px solid black; }
 
+.cart__list--item:hover {
+  background-color: red; }
+
 .cart__list--item fieldset {
   /* <fieldset> */
   height: 100%;
@@ -566,11 +573,20 @@ textarea {
   /* <input> */
   outline: none; }
 
-.cart__list--item--price {
+.cart__list--item--dollarSign {
   /* <span> */
   display: block;
   float: right;
   margin: 17px 15px 15px 0px; }
+
+.cart__list--item--price {
+  /* <span> */
+  display: block;
+  float: right; }
+
+.cart__list--item--basePrice {
+  /* <span> */
+  visibility: hidden; }
 
 .cart__footer {
   /* <footer> */
