--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -4,7 +4,7 @@
       <ul class="cart__list"></ul>
     </section>
     <footer class="cart__footer">
-      <input class="cart__total-cost" type="text" readonly="readonly" value="$0" />
+      <input class="cart__total-cost" type="disabled" readonly="readonly" value="$0"></input>
       <button class="cart__submit-button" type="submit">Place Order</button>
     </footer>
   </form>
