--- a/styles/sass/_sidebar.scss
+++ b/styles/sass/_sidebar.scss
@@ -9,9 +9,23 @@
   border-left: 1px solid black;
 }
 
+.sidebar__header { /* <header> */
+  height: $sidebar__header__height;
+  width: 100%;
+  background-color: lightgrey;
+  text-align: center;
+  border-bottom: 1px solid black;
+}
+
+#restaurant__name { /* <h1> */
+  margin: 0px auto;
+  font-size: 1.2em;
+  line-height: $sidebar__header__height;
+}
+
 .cart { /* <section> */
   position: absolute;
-    top: 0px;
+    top: $sidebar__header__height;
     right: 0px;
     bottom: $sidebar__footer__height;
     left: 0px;
@@ -33,22 +47,8 @@
       background-color: red;
     }
 
-    .cart__list--item fieldset { /* <fieldset> */
-      height: 100%;
-      width: 100%;
-      padding: 0px;
-      margin: 0px;
-      border: 0px;
-    }
-
-    .cart__list--item--name { /* <label> */
-      float: left;
-      margin: 0px auto;
-      padding: 15px;
-    }
-
     .cart__list--item--quantity { /* <input> */
-      float: right;
+      float: left;
       height: 25px;
       margin: 12px 15px;
       padding: 0px 10px;
@@ -58,6 +58,12 @@
       .cart__list--item--quantity:focus { /* <input> */
         outline: none;
       }
+
+    .cart__list--item--name { /* <label> */
+      float: left;
+      margin: 0px auto;
+      padding: 15px;
+    }
 
     .cart__list--item--dollarSign { /* <span> */
       display: block;
