--- a/views/_partials/_sidebar.ejs
+++ b/views/_partials/_sidebar.ejs
@@ -1,10 +1,13 @@
 <div class="sidebar">
-  <form>
+  <header class="sidebar__header">
+    <h1 id="restaurant__name">Caveman Cafe</h1>
+  </header>
+  <form method="POST" action="">
     <section class="cart">
       <ul class="cart__list"></ul>
     </section>
     <footer class="cart__footer">
-      <input class="cart__total-cost" type="disabled" readonly="readonly" value="$0"></input>
+      <input class="cart__total-cost" type="disabled" readonly="readonly" value="Total: $0"></input>
       <button class="cart__submit-button" type="submit">Place Order</button>
     </footer>
   </form>
