About to refactor a bunch of shit

--- a/styles/sass/_shared.scss
+++ b/styles/sass/_shared.scss
@@ -20,3 +20,10 @@ li {
   box-sizing: border-box;
   font-family: helvetica;
 }
+
+.show--block {
+  display: block !important;
+}
+.show--visability {
+  visibility: visible !important;
+}
