--- a/styles/sass/_sidebar.scss
+++ b/styles/sass/_sidebar.scss
@@ -104,6 +104,7 @@
       height: 50px;
       width: 100%;
       background-color: none;
+      border: 0px;
       border-top: 1px solid black;
     }
 
