--- a/styles/sass/app.scss
+++ b/styles/sass/app.scss
@@ -1,9 +1,11 @@
 @import './_reset.scss';
 @import './_normalize.scss';
 @import './_variables';
+
 @import './_menu-item';
 @import './_navbar';
 
 @import './customers.scss';
+@import './_submission-window.scss';
 @import './_sidebar.scss';
 @import './_shared.scss';
