--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -514,6 +514,61 @@ textarea {
 #lobster {
   color: red; }
 
+#submission-window--background {
+  /* <div> */
+  display: none;
+  cursor: pointer;
+  position: fixed;
+  top: 60px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background: rgba(0, 0, 0, 0.8); }
+
+.submission-window {
+  /* <div> */
+  position: relative;
+  visibility: hidden;
+  z-index: 2;
+  position: fixed;
+  top: 60px;
+  left: 0px;
+  right: 0px;
+  max-width: 800px;
+  width: 100%;
+  margin: 0px auto;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 1px solid black; }
+
+.submission-window__cart {
+  /* <section> */
+  position: relative;
+  background-color: white; }
+
+.submission-window__cart__footer {
+  /* <footer> */
+  position: relative;
+  height: 60px;
+  max-width: 800px;
+  width: 100%;
+  margin: 0px auto; }
+
+.submission-window__total-cost {
+  /* <input> */
+  border-bottom: 1px solid black !important; }
+
+.submission-window__name, .submission-window__phone-number {
+  /* <input> */
+  float: left;
+  height: 40px;
+  width: 50%;
+  text-align: center; }
+
+.submission-window__name:focus, .submission-window__phone-number:focus {
+  /* <input> */
+  outline: none; }
+
 .sidebar {
   /* <div> */
   position: fixed;
@@ -617,6 +672,7 @@ textarea {
   height: 50px;
   width: 100%;
   background-color: none;
+  border: 0px;
   border-top: 1px solid black; }
 
 .container {
@@ -637,3 +693,9 @@ li {
 * {
   box-sizing: border-box;
   font-family: helvetica; }
+
+.show--block {
+  display: block !important; }
+
+.show--visability {
+  visibility: visible !important; }
