--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -1,10 +1,25 @@
+#logo {
+  margin-left: 15px;
+  margin-right: auto;
+  margin-top: 15px; }
+
 .finished {
   background-color: black !important;
   color: white !important; }
 
+.fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 75px;
+  background-color: #00a087; }
+
 .container {
   width: 100%;
-  background-color: white; }
+  margin-top: 75px;
+  display: flex; }
   .container .deliver-food {
     background-color: #FFD397;
     font-size: larger;
@@ -20,30 +35,40 @@
   .container .deliver-food:hover {
     background-color: #D82351; }
   .container .chit_container {
-    border-color: black;
-    border-style: solid;
-    background-color: #B2BFC7;
+    align-items: stretch;
+    border-radius: 40px;
+    background-image: url("../images/cork_paint.jpg");
+    background-repeat: repeat-y;
     margin: auto;
-    width: 1000px;
-    height: 800px; }
-  .container .order_chit {
-    padding: 10px 10px 10px 10px;
-    border-color: black;
-    border-style: solid;
-    float: left;
-    margin: 10px 10px 10px 10px;
-    background-color: #DADEE7; }
-    .container .order_chit header {
-      width: 100%;
-      position: relative;
-      left: 0px;
-      top: 0px; }
-    .container .order_chit .remove_chit {
+    margin-top: 50px;
+    padding: 15px 15px 15px 15px;
+    font-family: courier;
+    width: 800px;
+    height: 100%; }
+    .container .chit_container .order_chit {
+      opacity: 1;
+      padding: 10px 10px 10px 10px;
+      border-color: black;
+      border-style: solid;
+      float: left;
+      margin: 10px 10px 10px 10px;
+      background-image: url("../images/paper.gif"); }
+      .container .chit_container .order_chit header {
+        width: 100%;
+        position: relative;
+        left: 0px;
+        top: 0px; }
+    .container .chit_container .remove_chit {
       color: blue; }
-    .container .order_chit .remove_chit_2 {
+    .container .chit_container .remove_chit_2 {
       color: blue; }
-    .container .order_chit ul {
+    .container .chit_container ul {
       padding: 0; }
-      .container .order_chit ul li {
+      .container .chit_container ul li {
         padding: none;
         list-style-type: none; }
+
+#page_header {
+  background-color: grey;
+  height: 80px;
+  position: fixed; }
