--- a/styles/sass/restaurant.scss
+++ b/styles/sass/restaurant.scss
@@ -1,12 +1,31 @@
+
+#logo{
+      margin-left: 15px;
+      margin-right: auto;
+      margin-top: 15px;
+
+    }
+
  .finished{
       background-color: black !important;
       color: white !important;
     }
 
 
-.container{
+  .fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 75px;
+  background-color: #00a087;
+}
+  .container{
     width: 100%;
-    background-color: white;
+    margin-top:75px;
+    display: flex;
+
 
    .deliver-food{
 
@@ -29,31 +48,41 @@
 
     }
   .chit_container{
-    border-color: black;
-    border-style:solid;
-    background-color: #B2BFC7;
+
+
+    align-items: stretch;
+
+    border-radius: 40px;
+    background-image: url("../images/cork_paint.jpg");
+    background-repeat: repeat-y;
     margin: auto ;
+    margin-top: 50px;
+    padding:15px 15px 15px 15px;
+    font-family: courier;
 
-    width: 1000px;
-    height:800px;
 
-  }
+    width: 800px;
+    height:100%;
 
-  .order_chit{
-    padding: 10px 10px 10px 10px;
-    border-color: black;
-    border-style:solid;
-    float: left;
-    margin: 10px 10px 10px 10px;
-    background-color:#DADEE7;
-    header{
 
-      width:100%;
-      position: relative;
-      left:0px;
-      top:0px;
 
-    }
+    .order_chit{
+      opacity:1;
+      padding: 10px 10px 10px 10px;
+      border-color: black;
+      border-style:solid;
+      float: left;
+      margin: 10px 10px 10px 10px;
+      background-image: url("../images/paper.gif");
+      header{
+
+        width:100%;
+        position: relative;
+        left:0px;
+        top:0px;
+
+      }
+      }
     .remove_chit{
       color: blue;
     }
@@ -72,6 +101,13 @@
     }
 
   }
+
+}
+#page_header{
+  background-color: grey;
+  height:80px;
+  position: fixed;
+
 
 }
 
