--- a/public/stylesheets/restaurant.css
+++ b/public/stylesheets/restaurant.css
@@ -1,7 +1,17 @@
+#draggable {
+  width: 150px;
+  height: 150px;
+  padding: 0.5em;
+  border-color: black;
+  border-style: solid; }
+
 #logo {
   margin-left: 15px;
   margin-right: auto;
   margin-top: 15px; }
+
+body {
+  background-image: url("../images/restaurant.jpg"); }
 
 .finished {
   background-color: black !important;
@@ -14,7 +24,17 @@
   z-index: 9999;
   width: 100%;
   height: 75px;
-  background-color: #00a087; }
+  /*background-color: #441900;*/
+  background: red;
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#441900, #541900);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#441900, #541900);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#441900, #541900);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#441900, #541900);
+  /* Standard syntax */ }
 
 .container {
   width: 100%;
