--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -617,11 +617,12 @@ textarea {
 
 .cart__list--item--quantity {
   /* <input> */
+  position: relative;
   float: left;
-  height: 25px;
-  margin: 12px 15px;
+  height: 30px;
+  margin: 10px 15px;
   padding: 0px 10px;
-  width: 40px;
+  width: 48px;
   border: 1px solid black; }
 
 .cart__list--item--quantity:focus {
@@ -630,20 +631,29 @@ textarea {
 
 .cart__list--item--name {
   /* <label> */
-  float: left;
+  display: inline-block;
   margin: 0px auto;
-  padding: 15px; }
+  padding: 15px 0px;
+  font-size: 1.2em; }
 
-.cart__list--item--dollarSign {
+.cart__list--item--dollarSign, .cart__list--item--price {
   /* <span> */
   display: block;
   float: right;
+  font-size: 1.2em;
   margin: 17px 15px 15px 0px; }
 
-.cart__list--item--price {
+.cart__list--item--dollarSign:after {
   /* <span> */
-  display: block;
-  float: right; }
+  clear: both; }
+
+.cart__list--item--price:after {
+  /* <span> */
+  clear: both; }
+
+.cart__list--item--dollarSign {
+  /* <span> */
+  margin-right: 0px; }
 
 .cart__list--item--basePrice {
   /* <span> */
@@ -693,6 +703,14 @@ li {
 * {
   box-sizing: border-box;
   font-family: helvetica; }
+
+.cart__list--item--quantity::-webkit-inner-spin-button,
+.cart__list--item--quantity::-webkit-outer-spin-button {
+  position: absolute;
+  right: 0px;
+  top: 6px;
+  opacity: 1;
+  cursor: pointer; }
 
 .show--block {
   display: block !important; }
