--- a/styles/sass/app.scss
+++ b/styles/sass/app.scss
@@ -8,4 +8,5 @@
 @import './customers.scss';
 @import './_submission-window.scss';
 @import './_sidebar.scss';
+@import './_cart.scss';
 @import './_shared.scss';
