--- a/styles/sass/_submission-window.scss
+++ b/styles/sass/_submission-window.scss
@@ -33,6 +33,7 @@
   
 
   background-color: white;
+  border-radius: 3px;
 }
 
 .submission-window__cart__footer { /* <footer> */
@@ -42,7 +43,6 @@
   width: 100%;
 
   margin: 0px auto;
-
 }
 
 .submission-window__total-cost { /* <input> */
