--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -2,5 +2,7 @@ $navbar__height: 60px;
 
 $submission-window__cart--max-width: 800px;
 
-$sidebar__header__height: 42px;
+$sidebar__header__height: 50px;
 $sidebar__footer__height: 90px;
+
+$menu-item--header: 30px;
