--- a/views/_partials/_navbar.ejs
+++ b/views/_partials/_navbar.ejs
@@ -1,11 +1,7 @@
 <nav id="navbar__container">
-  <ul class="navlist navlist--left">
-    <li><a href="#">text</a></li>
-  </ul>
+
   <div class="centerpiece__container">
-    <img id="logo" src="" />
+    <img id="logo" src="./images/logo_stove.png" />
   </div>
-  <ul class="navlist navlist--right">
-    <li><a href="#">text</a></li>
-  </ul>
+
 </nav>
