--- a/styles/sass/_navbar.scss
+++ b/styles/sass/_navbar.scss
@@ -8,8 +8,7 @@
 
   height: $navbar__height;
 
-  background-color: darkgrey;
-
+  background-color: #191919;
   border-bottom: 1px solid black;
 }
 
@@ -70,21 +69,16 @@
   position: relative;
 
   margin: 0px auto;
-  padding: 0px 0px;
+  padding: 6px 0px;
 
   height: 100%;
   width: $navbar__height;
 
-  background-color: #131313;
-
-  border-radius: 50%;
-  border-right: 1px solid #a0a0a0;
-  border-left: 1px solid #a0a0a0;
 }
 
 #logo { /* <img> */
-  max-height: $navbar__height;
-  width: 100%;
+  max-height: 100%;
+  width: 90%;
 }
 
 
